# cosmic-ext-connect-desktop-app

./: .envrc  .gitignore  BUILD_STATUS.md  CAMERA_FIX_SUMMARY.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  ISSUE_37_BREAKDOWN.md  LOCAL_TESTING_GUIDE.md  NIXOS_INSTALLATION.md  README.md  REMOVAL_SUMMARY.md  build.sh  com.system76.CosmicConnect.service  deny.toml  flake.nix  justfile  kdeconnect-protocol.md  run-applet.sh  run-local-test.sh  setup-dev-env.sh  test-config.toml
.gemini/: GEMINI.md
.github/: dependabot.yml
.github/workflows/: ci.yml
aur/: .SRCINFO  PKGBUILD  README.md  SUBMITTING.md  cosmic-connect-daemon.service  cosmic-connect-daemon.service.patch  cosmic-connect.install
cosmic-applet-connect/: Cargo.toml
cosmic-applet-connect/data/: cosmic-applet-connect.desktop  cosmic-applet-kdeconnect.desktop
cosmic-applet-connect/src/: dbus_client.rs  main.rs  messages.rs  onboarding_config.rs  pinned_devices_config.rs
cosmic-applet-connect/src/state/: camera.rs  conversations.rs  device.rs  mod.rs  screen_share.rs  system.rs  transfer.rs
cosmic-applet-connect/src/views/: conversations.rs  device.rs  dialogs.rs  history.rs  mod.rs  mpris.rs  popup.rs  settings.rs  transfer.rs
cosmic-applet-kdeconnect/: Cargo.toml
cosmic-applet-kdeconnect/src/: dbus_client.rs  main.rs
cosmic-connect/: Cargo.toml
cosmic-connect-daemon/: Cargo.toml  cosmic-connect-daemon.service
cosmic-connect-daemon/src/: config.rs  cosmic_notifications.rs  dbus.rs  desktop_icons.rs  device_config.rs  diagnostics.rs  error_handler.rs  main.rs  mpris_manager.rs  notification_image.rs  notification_listener.rs
cosmic-connect-daemon/tests/: networkshare_tests.rs  open_interface_tests.md  plugin_integration_tests.rs
cosmic-connect-manager/src/: dbus_client.rs  main.rs
cosmic-connect-protocol/: Cargo.toml
cosmic-connect-protocol/examples/: test_capture.rs  test_streaming.rs  test_vnc_server.rs
cosmic-connect-protocol/src/: bluetooth_connection_manager.rs  device.rs  error.rs  fs_utils.rs  lib.rs  packet.rs  payload.rs  recovery.rs  recovery_coordinator.rs  resource_manager.rs  transport_manager.rs
cosmic-connect-protocol/src/auth/: challenge.rs  verify.rs
cosmic-connect-protocol/src/connection/: events.rs  manager.rs
cosmic-connect-protocol/src/discovery/: bluetooth.rs  events.rs  mod.rs  service.rs  unified.rs
cosmic-connect-protocol/src/pairing/: handler.rs  mod.rs  service.rs
cosmic-connect-protocol/src/plugins/: audiostream.rs  battery.rs  camera.rs  chat.rs  clipboard.rs  clipboard_storage.rs  clipboardhistory.rs  connectivity_report.rs  contacts.rs  filesync.rs  findmyphone.rs  lock.rs  logind_backend.rs  macro.rs  mod.rs  mousekeyboardshare.rs  mpris.rs  mpris_backend.rs  networkshare.rs  notification.rs  ping.rs  power.rs  presenter.rs  remoteinput.rs  runcommand.rs  screenshare.rs  screenshot.rs  share.rs  systemd_inhibitor.rs  systemmonitor.rs  systemvolume.rs  telephony.rs  upower_backend.rs  wol.rs
cosmic-connect-protocol/src/plugins/audiostream/: audio_backend.rs  codec.rs  mod.rs
cosmic-connect-protocol/src/plugins/contacts/: README.md  database.rs  mod.rs  signals.rs
cosmic-connect-protocol/src/plugins/extendeddisplay/: mod.rs
cosmic-connect-protocol/src/plugins/mkshare/: edge_detector.rs  hotkeys.rs  mod.rs  types.rs
cosmic-connect-protocol/src/plugins/phoneauth/: capabilities.rs  mod.rs  request.rs  response.rs
cosmic-connect-protocol/src/plugins/presenter/: laser_pointer.rs  mod.rs
cosmic-connect-protocol/src/plugins/remotedesktop/: mod.rs
cosmic-connect-protocol/src/plugins/remotedesktop/capture/: frame.rs  mod.rs
cosmic-connect-protocol/src/plugins/remotedesktop/input/: mod.rs
cosmic-connect-protocol/src/plugins/remotedesktop/vnc/: encoding.rs  protocol.rs  server.rs  streaming.rs
cosmic-connect-protocol/src/plugins/screenshare/: bitrate_controller.rs  capture.rs  cursor_monitor.rs  decoder.rs  mod.rs  portal.rs  stream_receiver.rs  stream_sender.rs
cosmic-connect-protocol/src/transport/: bluetooth.rs  mod.rs  trait.rs
cosmic-connect-protocol/tests/: error_injection.rs  integration_tests.rs  transport_integration_tests.rs
cosmic-connect/src/: dbus_client.rs  main.rs  notifications.rs  settings.rs
cosmic-display-stream/: Cargo.toml
cosmic-display-stream/src/: capture.rs  encoder.rs  error.rs  gbm_devices.rs  input.rs  lib.rs  output.rs  pipewire.rs  streaming.rs
cosmic-ext-applet-connect/src/: main.rs
cosmic-ext-connect-daemon/src/: desktop_icons.rs
cosmic-ext-connect-manager/src/: dbus_client.rs  main.rs
cosmic-kdeconnect/: Cargo.toml
cosmic-kdeconnect/src/: dbus_client.rs  main.rs
cosmic-messages-popup/: Cargo.toml
cosmic-messages-popup/src/: app.rs  dbus.rs  gtk_webview.rs  main.rs  notification.rs  webview.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEBUGGING.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  ERROR_HANDLING.md  Home.md  ISSUE_42_PROGRESS.md  NIXOS_INSTALLATION.md  PAIRING_FIX_RETROSPECTIVE.md  PAIRING_PROCESS.md  PLUGIN_TESTING_GUIDE.md  PLUGIN_TRANSPORT_COMPATIBILITY.md  PROTOCOL_AUDIT.md  README.md  RICH_NOTIFICATIONS.md  TLS_IMPLEMENTATION.md  TRANSPORT_LAYER.md  USER_GUIDE.md  WIKI_SETUP.md  cosmic-phone-auth-guide.md
flatpak/: io.github.olafkfreund.CosmicExtConnect.yml
kdeconnect-daemon/: Cargo.toml  README.md  kdeconnect-daemon.service
kdeconnect-daemon/src/: config.rs  cosmic_notifications.rs  dbus.rs  device_config.rs  main.rs  mpris_manager.rs
kdeconnect-protocol/: Cargo.toml
kdeconnect-protocol/src/: device.rs  discovery.rs  error.rs  lib.rs  packet.rs  pairing.rs
kdeconnect-protocol/src/connection/: events.rs  manager.rs
kdeconnect-protocol/src/pairing/: events.rs  handler.rs  mod.rs  service.rs
kdeconnect-protocol/src/plugins/: battery.rs  clipboard.rs  mod.rs  mpris.rs  notification.rs  ping.rs  presenter.rs  share.rs  telephony.rs
kdeconnect-protocol/src/transport/: mod.rs  tcp.rs  tls.rs  tls_config.rs
kdeconnect-protocol/tests/: integration_tests.rs
nix/: README.md  module.md  module.nix  package.nix  tests.nix
scripts/: test-plugins.sh
(+9 files in other folders)
