[workspace]
resolver = "2"
members = [
    "kdeconnect-protocol",
    "cosmic-applet-kdeconnect",
    "cosmic-kdeconnect",
    "kdeconnect-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Olaf"]
license = "GPL-3.0-or-later"
repository = "https://github.com/yourusername/cosmic-applet-kdeconnect"
homepage = "https://github.com/yourusername/cosmic-applet-kdeconnect"
keywords = ["cosmic", "desktop", "kdeconnect", "sync", "applet"]
categories = ["gui", "network-programming"]
rust-version = "1.70"

[workspace.dependencies]
# GUI and Desktop Integration
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = { version = "0.13", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2"

# Service Discovery
mdns-sd = "0.11"

# DBus
zbus = "4"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
base64 = "0.22"
hex = "0.4"

# Cryptography
sha2 = "0.10"
ring = "0.17"

# System Integration
keyring = "3.0"

# Configuration
toml = "0.9"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
