[workspace]
resolver = "2"
members = [
    "cosmic-ext-connect-protocol",
    "cosmic-ext-applet-connect",
    "cosmic-ext-connect-daemon",
    "cosmic-ext-connect-manager",
    "cosmic-ext-messages",
    "cosmic-ext-messages-popup",
    "cosmic-ext-display-stream",
]

[workspace.package]
version = "0.18.0"
edition = "2021"
authors = ["Olaf"]
license = "GPL-3.0-or-later"
repository = "https://github.com/olafkfreund/cosmic-connect-desktop-app"
homepage = "https://github.com/olafkfreund/cosmic-connect-desktop-app"
keywords = ["cosmic", "desktop", "device-sync", "sync", "applet"]
categories = ["gui", "network-programming"]
rust-version = "1.70"

[workspace.dependencies]
# GUI and Desktop Integration
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }

# Shared Cosmic Connect Core (TLS and crypto layer)
# Using git dependency instead of path for better Nix flake support
cosmic-ext-connect-core = { git = "https://github.com/olafkfreund/cosmic-connect-core.git", branch = "main", package = "cosmic-ext-connect-core" }

# Protocol implementation
cosmic-ext-connect-protocol = { path = "./cosmic-ext-connect-protocol" }

# Display stream (extended display to Android tablet)
cosmic-ext-display-stream = { path = "./cosmic-ext-display-stream" }

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Service Discovery
mdns-sd = "0.17"

# DBus
zbus = "5"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
chrono = "0.4"
uuid = { version = "1.20", features = ["v4", "serde"] }
dirs = "6.0"
base64 = "0.22"
hex = "0.4"

# Cryptography
sha2 = "0.10"
ring = "0.17"

# System Integration
keyring = "3.0"
ashpd = "0.12"
pipewire = "0.8"

# Video Encoding (GStreamer)
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"

# Network Streaming (WebRTC)
webrtc = "0.12"
tokio-tungstenite = "0.26"

# Configuration
toml = "0.8"

# Input Control (for Remote Input plugin)
mouse-keyboard-input = "0.9"

# Bluetooth Support (RFCOMM via BlueZ)
# Features:
# - bluetoothd: Access to Session and Adapter for device management
# - rfcomm: RFCOMM socket support for serial communication
bluer = { version = "0.17", features = ["bluetoothd", "rfcomm"] }

# Rich Notification Support
regex = "1.12"
open = "5.0"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
