[package]
name = "cosmic-applet-connect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "COSMIC Connect applet for COSMIC Desktop"

[dependencies]
libcosmic = { workspace = true, features = ["applet"] }
cosmic-connect-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
zbus = { workspace = true }
futures = { workspace = true }
ashpd = { workspace = true }
arboard = "3.4"
dirs = "5.0"
toml = "0.8"

[lib]
name = "cosmic_applet_connect"
path = "src/lib.rs"

[[bin]]
name = "cosmic-applet-connect"
path = "src/main.rs"

[[bin]]
name = "cosmic-connect-mirror"
path = "src/bin/mirror.rs"