[package]
name = "cosmic-applet-kdeconnect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "KDE Connect applet for COSMIC Desktop"

[dependencies]
libcosmic = { workspace = true, features = ["applet"] }
kdeconnect-protocol = { path = "../kdeconnect-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
zbus = { workspace = true }
futures = { workspace = true }

[[bin]]
name = "cosmic-applet-kdeconnect"
path = "src/main.rs"
