[package]
name = "cosmic-connect-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cosmic Connect background daemon"

[dependencies]
cosmic-connect-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
zbus = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
chrono = { workspace = true }
clap = { workspace = true }
hostname = "0.4"
arboard = "3.4"
regex = { workspace = true }
open = { workspace = true }
serde_bytes = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[build-dependencies]
chrono = { workspace = true }
rustc_version = "0.4"

[[bin]]
name = "cosmic-connect-daemon"
path = "src/main.rs"

[features]
default = []
remotedesktop = ["cosmic-connect-protocol/remotedesktop"]
screenshare = ["cosmic-connect-protocol/screenshare"]
