[package]
name = "cosmic-connect-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cosmic Connect protocol implementation in Rust"

[dependencies]
# Shared cosmic-connect-core (provides TLS, certificates, protocol)
cosmic-connect-core = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mdns-sd = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
mouse-keyboard-input = { workspace = true }
btleplug = { workspace = true }
futures = { workspace = true }

# Legacy pairing module still uses OpenSSL temporarily
# TODO: Migrate pairing to use cosmic-connect-core CertificateInfo
openssl = "0.10"
pem = "3.0"

# TLS for payload transfers (file sharing)
tokio-rustls = "0.25"

# System monitoring (Linux)
nix = { version = "0.27", features = ["fs"] }

# RemoteDesktop plugin dependencies
pipewire = { version = "0.8", optional = true }
openh264 = { version = "0.6", optional = true }
lz4 = { version = "1.25", optional = true }
image = { version = "0.25", optional = true }
notify = "8.2.0"
blake3 = "1.8.3"
walkdir = "2.5.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
gstreamer = { version = "0.24.4", optional = true }
gstreamer-app = { version = "0.24.4", optional = true }
gstreamer-video = { version = "0.24.4", optional = true }

[features]
default = []
remotedesktop = ["pipewire", "openh264", "lz4", "image"]
low_latency = []
screenshare = ["gstreamer", "gstreamer-app", "gstreamer-video", "image"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.13"
tracing-subscriber = "0.3"
