[package]
name = "cosmic-connect-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cosmic Connect protocol implementation in Rust"

[dependencies]
# Shared cosmic-connect-core (provides TLS, certificates, protocol)
cosmic-connect-core = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mdns-sd = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
zbus = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
mouse-keyboard-input = { workspace = true }
bluer = { workspace = true }
futures = { workspace = true }

# Wayland overlay for laser pointer
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols = "0.32"
wayland-protocols-wlr = "0.3"
tiny-skia = "0.11"
memmap2 = "0.9"

# Legacy pairing module still uses OpenSSL temporarily
# TODO: Migrate pairing to use cosmic-connect-core CertificateInfo
openssl = "0.10"
pem = "3.0"

# TLS for payload transfers (file sharing)
# Using rustls 0.22 with ring provider for Android cross-compilation compatibility
rustls = "0.22"
tokio-rustls = "0.25"

# System monitoring (Linux)
nix = { version = "0.27", features = ["fs"] }

# RemoteDesktop plugin dependencies
pipewire = { version = "0.8", optional = true }
openh264 = { version = "0.6", optional = true }
lz4 = { version = "1.25", optional = true }
image = { version = "0.25", optional = true }

# AudioStream plugin dependencies
# Note: Requires libopus-dev system package
opus = { version = "0.3", optional = true }
# AAC codec support (future implementation)
# fdk-aac = { version = "0.5", optional = true }
notify = "8.2.0"
blake3 = "1.8.3"
walkdir = "2.5.0"
globset = "0.4"
rusqlite = { version = "0.38.0", features = ["bundled"] }
gstreamer = { version = "0.24.4", optional = true }
gstreamer-app = { version = "0.24.4", optional = true }
gstreamer-video = { version = "0.24.4", optional = true }
ashpd = { workspace = true, optional = true }

[features]
default = []
remotedesktop = ["pipewire", "openh264", "lz4", "image", "ashpd"]
low_latency = []
screenshare = ["gstreamer", "gstreamer-app", "gstreamer-video", "image", "ashpd", "pipewire"]
video = ["cosmic-connect-core/video"]
audiostream = ["pipewire"]
audiostream-opus = ["audiostream", "opus"]
# AAC codec support - currently a placeholder feature for future implementation
# When implementing, uncomment fdk-aac dependency and add: aac = ["audiostream", "fdk-aac"]
aac = ["audiostream"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.13"
tracing-subscriber = "0.3"
