[package]
name = "cosmic-connect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "COSMIC Connect - Device connectivity application for COSMIC Desktop"

[dependencies]
libcosmic = { workspace = true, features = ["winit", "tokio"] }
kdeconnect-protocol = { path = "../kdeconnect-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
zbus = { workspace = true }
futures = { workspace = true }
ashpd = { workspace = true }

[[bin]]
name = "cosmic-connect"
path = "src/main.rs"
