[package]
name = "kdeconnect-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "KDE Connect protocol implementation in Rust"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
openssl = { workspace = true }
tokio-openssl = { workspace = true }
mdns-sd = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
pem = "3.0"
mouse-keyboard-input = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.13"
